--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backbone-async-event",
   "version": "0.1.0",
   "author": "Joe Hudson <joehud@gmail.com>",
-  "description": "asynchronous event triggers for Backbone",
+  "description": "asynchronous event triggers for Backbone Model/Collection for decoupled watching of model specific asynchronous activity",
   "repository": {
     "type": "git",
     "url": "https://github.com/jhudson8/backbone-async-event.git"
