massive rewrite and feature changes.  completely not backwards compatible
- allow event names and referenced attributes to be overridden
- use "xhr" instead of "async" for event names
- change signature of all event parameters
- provide event forwarding capabilities
- rewrite documentation

The next release will see the project name change from backbone-async-event to backbone-xhr-events

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mocha": "*",
     "sinon": "*",
     "sinon-chai": "*",
-    "uglify-js": "*"
+    "uglify-js": "*",
+    "backbone": "*"
   },
   "license": "MIT"
 }
